feature: add product page

--- a/src/app/components/products-list/products-list.component.html
+++ b/src/app/components/products-list/products-list.component.html
@@ -5,6 +5,7 @@
             <li>
                 <p>{{product.title}}</p>
                 <button (click)="cartService.addToCart(product)">Add to cart</button>
+                <a routerLink="product/{{product.id}}">See details</a>
             </li>
         }
     </ul>
