update: add more info to product page

--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,1 +1,4 @@
 <p>product id: {{productId}}</p>
+<p>name: {{product.title}}</p>
+<p>price: {{product.price}}</p>
+<p>description: {{product.description}}</p>
