feature: add to cart button in product page

--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -2,3 +2,4 @@
 <p>name: {{product.title}}</p>
 <p>price: {{product.price}}</p>
 <p>description: {{product.description}}</p>
+<button (click)="cartService.addToCart(product)">Add to Cart</button>
