--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,5 @@
 <h1>Angular 19 online store 2025</h1>
 <nav>
-    Cart {{cartCount()}}
+    <a routerLink="">Shop</a>
+    <a routerLink="cart">Cart {{cartCount()}}</a>
 </nav>
