--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,1 +1,7 @@
-<p>cart works!</p>
+<ul>
+    @for (product of products; track product.id) {
+        <li>{{product.title}}, {{product.price}}</li>
+    }
+</ul>
+
+<p>Total price: {{totalPrice}}</p>
