--- a/src/app/components/products-list/products-list.component.html
+++ b/src/app/components/products-list/products-list.component.html
@@ -1,7 +1,7 @@
 <section>
     <h2>Products List</h2>
     <ul>    
-        @for (product of products; track product.id) {
+        @for (product of products; track product.title) {
             <li>
                 <p>{{product.title}}</p>
                 <button (click)="cartService.addToCart(product)">Add to cart</button>
