--- a/src/app/components/products-list/products-list.component.html
+++ b/src/app/components/products-list/products-list.component.html
@@ -3,8 +3,8 @@
     <ul>    
         @for (product of products(); track product.id) {
             <li>
-                <p>{{product.title}}</p>
-                <img width="200px" src="{{product.images[0]}}" alt="product image">
+                <p class="title">{{product.title}}</p>
+                <img width="200" height="200" [ngSrc]="product.images[0]" alt="product image">
                 <p>Price: {{product.price | currency}}</p>
                 <p>Stock: {{product.stock}}</p>
                 <button style="margin-right: 8px" (click)="cartService.addToCart(product)">Add to cart</button>
