--- a/src/app/components/products-search/products-search.component.html
+++ b/src/app/components/products-search/products-search.component.html
@@ -1,11 +1,19 @@
 <section aria-label="search for product">
     <div class="category-filter">
-        <label for="products">Select Category</label>
-        <select (change)="handleCategorySelect()" [(ngModel)]="selectedCategory" name="products">
+        <label for="categories">Select Category</label>
+        <select (change)="handleCategorySelect()" [(ngModel)]="selectedCategory" name="categories">
             <option value="everything">everything</option>
             <hr />
             @for (category of productsCategoryList; track category) {
                 <option [value]="category">{{category}}</option>
+            }
+        </select>
+    </div>
+    <div class="category-filter">
+        <label for="sorts">Sort By</label>
+        <select (change)="handleSortSelect()" [(ngModel)]="selectedSort" name="sorts">
+            @for (sort of sortsList; track sort) {
+                <option [value]="sort.value">{{sort.displayName}}</option>
             }
         </select>
     </div>
