--- a/src/app/components/products-search/products-search.component.html
+++ b/src/app/components/products-search/products-search.component.html
@@ -18,4 +18,8 @@
             }
         </select>
     </div>
+    <div class="category-filter">
+        <label for="search">Search</label>
+        <input type="text" [(ngModel)]="searchQuery" name="search" (input)="handleSearch($event)" />
+    </div>
 </section>
