refactor: search settings component

--- a/src/app/components/products-list/products-list.component.html
+++ b/src/app/components/products-list/products-list.component.html
@@ -1,6 +1,6 @@
 <section>
     <h2>Products List</h2>
-    <app-products-search></app-products-search>
+    <app-search-settings></app-search-settings>
     <ul>    
         @for (product of products(); track product.id) {
             <li>
