feature: checkout page

--- a/src/app/components/cart-page/cart-page.component.html
+++ b/src/app/components/cart-page/cart-page.component.html
@@ -11,6 +11,7 @@
 
 @if (subTotalPrice()) {
     <p>Total price: {{subTotalPrice() | currency}}</p>
+    <button [routerLink]="['/checkout']">Continue to Checkout</button>
 } @else {
     <p>Cart is empty. <a routerLink="">Go shopping!</a></p>
 }
