--- a/src/app/components/search-settings/components/category-select/category-select.component.html
+++ b/src/app/components/search-settings/components/category-select/category-select.component.html
@@ -1,9 +1,8 @@
 <div>
     <label for="category-select">Categories</label>
-    <select [(ngModel)]="selectedCategory" (change)="handleCategorySelect()" name="category-select" id="category-select">
-        <option value="{{defaultCategory}}">{{displayNamesMap.get(defaultCategory)}}</option>
-        @for (category of categories; track category) {
-            <option value="{{category}}">{{displayNamesMap.get(category)}}</option>
+    <select (change)="handleCategorySelect($event)" name="category-select" id="category-select">
+        @for (category of categoriesResource.value(); track category; let index = $index) {
+            <option [selected]="!index" value="{{category}}">{{displayNamesMap.get(category)}}</option>
         }
     </select>
 </div>
