--- a/src/app/components/search-settings/components/search-input/search-input.component.html
+++ b/src/app/components/search-settings/components/search-input/search-input.component.html
@@ -2,4 +2,5 @@
     <label for="search-input">Search</label>
     <input [(ngModel)]="searchQuery" type="text" (input)="handleSearchInput()">
     <button type="button" (click)="handleClearSearchInput()">Clear</button>
+    <span>*ignores category.</span>
 </div>
